ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solarsite-ingress
  namespace: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: solarsite
            port:
              number: 8080
